--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,3 +36,4 @@ configure_file(config/hyperion.schema.json ${LIBRARY_OUTPUT_PATH} @ONLY)
 add_subdirectory(dependencies)
 add_subdirectory(libsrc)
 add_subdirectory(src)
+add_subdirectory(test)
