Added HyperionPng with similar interface as Hyperion to test frame-capture and handling.

--- a/libsrc/CMakeLists.txt
+++ b/libsrc/CMakeLists.txt
@@ -10,6 +10,18 @@ target_link_libraries(bob2hyperion
 		hyperion
 		hyperion-utils)
 
+# Find the libPNG
+find_package(PNG REQUIRED QUIET)
+
+# Add additional includes dirs
+include_directories(${PNG_INCLUDE_DIR})
+
+add_library(bob2hyperion-png SHARED
+		hyperion-png.cpp)
+
+target_link_libraries(bob2hyperion-png
+		hyperion-png)
+
 add_subdirectory(hyperion)
 add_subdirectory(hyperionpng)
 add_subdirectory(utils)
