--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,3 +1,5 @@
+# Needed for testing non-public components
+include_directories(../libsrc)
 
 # Add the simple test executable 'TestSpi'
 add_executable(TestSpi
@@ -25,15 +27,19 @@ add_executable(TestRgbImage
 target_link_libraries(TestRgbImage
 		hyperion-utils)
 
+add_executable(TestColorTransform
+    TestColorTransform.cpp)
+target_link_libraries(TestColorTransform
+    hyperion)
+
 # Find the libPNG
 find_package(PNG REQUIRED QUIET)
 
-# Add additional includes dirs
-include_directories(${PNG_INCLUDE_DIR})
-
 #if(PNG_FOUND)
+    # Add additional includes dirs
+    include_directories(${PNG_INCLUDE_DIR})
 
-	add_executable(TestHyperionPng
+    add_executable(TestHyperionPng
 			TestHyperionPng.cpp)
 
 	target_link_libraries(TestHyperionPng
