--- a/src/hyperion-remote/CMakeLists.txt
+++ b/src/hyperion-remote/CMakeLists.txt
@@ -1,19 +1,22 @@
 cmake_minimum_required(VERSION 2.8)
 project(hyperion-remote)
 
-find_package(Qt4 REQUIRED QtCore QtNetwork)
+find_package(Qt4 REQUIRED QtCore QtGui QtNetwork)
 
 # The following I do not undrstand completely...
 # libQtCore.so uses some hardcoded library path inside which are incorrect after copying the file RPi file system
 # Therefor, an extra path is needed on which to find the required libraries
 LINK_DIRECTORIES(${LINK_DIRECTORIES} ${CMAKE_FIND_ROOT_PATH}/lib/arm-linux-gnueabihf)
 
-include_directories(${QT_INCLUDE_DIR})
+include_directories(${QT_INCLUDES})
 
-set(hyperion-remote_HEADERS)
+set(hyperion-remote_HEADERS
+    specialoptions.h
+    connection.h)
 
 set(hyperion-remote_SOURCES
-    hyperion-remote.cpp)
+    hyperion-remote.cpp
+    connection.cpp)
 
 qt4_wrap_cpp(HYPERION_REMOTE_MOC_SOURCES
     ${hyperion-remote_HEADERS})
@@ -25,6 +28,7 @@ add_executable(hyperion-remote
 
 qt4_use_modules(hyperion-remote
     Core
+    Gui
     Network)
 
 target_link_libraries(hyperion-remote
