--- a/libsrc/CMakeLists.txt
+++ b/libsrc/CMakeLists.txt
@@ -10,18 +10,22 @@ target_link_libraries(bob2hyperion
 		hyperion
 		hyperion-utils)
 
+add_subdirectory(hyperion)
+add_subdirectory(utils)
+
 # Find the libPNG
 find_package(PNG REQUIRED QUIET)
 
-# Add additional includes dirs
-include_directories(${PNG_INCLUDE_DIR})
+if (PNG_FOUND)
+	# Add additional includes dirs
+	include_directories(${PNG_INCLUDE_DIR})
 
-add_library(bob2hyperion-png SHARED
-		hyperion-png.cpp)
+	add_library(bob2hyperion-png SHARED
+			hyperion-png.cpp)
 
-target_link_libraries(bob2hyperion-png
-		hyperion-png)
+	target_link_libraries(bob2hyperion-png
+			hyperion-png)
 
-add_subdirectory(hyperion)
-add_subdirectory(hyperionpng)
-add_subdirectory(utils)
+	add_subdirectory(hyperionpng)
+endif(PNG_FOUND)
+
