--- a/libsrc/hyperion/CMakeLists.txt
+++ b/libsrc/hyperion/CMakeLists.txt
@@ -23,6 +23,7 @@ SET(Hyperion_HEADERS
 		${CURRENT_SOURCE_DIR}/DispmanxFrameGrabber.h
 
 		${CURRENT_SOURCE_DIR}/LedDeviceWs2801.h
+		${CURRENT_SOURCE_DIR}/LedDeviceTest.h
 		${CURRENT_SOURCE_DIR}/ImageToLedsMap.h
 		${CURRENT_SOURCE_DIR}/ColorTransform.h
 )
@@ -38,6 +39,7 @@ SET(Hyperion_SOURCES
 		${CURRENT_SOURCE_DIR}/DispmanxFrameGrabber.cpp
 
 		${CURRENT_SOURCE_DIR}/LedDeviceWs2801.cpp
+		${CURRENT_SOURCE_DIR}/LedDeviceTest.cpp
 		${CURRENT_SOURCE_DIR}/ImageToLedsMap.cpp
 		${CURRENT_SOURCE_DIR}/ColorTransform.cpp
 )
