--- a/libsrc/CMakeLists.txt
+++ b/libsrc/CMakeLists.txt
@@ -4,5 +4,6 @@ SET(CURRENT_HEADER_DIR ${CMAKE_SOURCE_DIR}/include)
 SET(CURRENT_SOURCE_DIR ${CMAKE_SOURCE_DIR}/libsrc)
 
 add_subdirectory(hyperion)
+add_subdirectory(dispmanx-grabber)
 add_subdirectory(jsonserver)
 add_subdirectory(utils)
