--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,30 +2,30 @@
 include_directories(../libsrc)
 
 # Add the simple test executable 'TestSpi'
-add_executable(TestSpi
+add_executable(test_spi
 		TestSpi.cpp)
-target_link_libraries(TestSpi
+target_link_libraries(test_spi
 		hyperion)
 
 
-add_executable(TestConfigFile
+add_executable(test_configfile
 		TestConfigFile.cpp)
-target_link_libraries(TestConfigFile
+target_link_libraries(test_configfile
 		hyperion)
 
-add_executable(TestRgbImage
+add_executable(test_rgbimage
 		TestRgbImage.cpp)
-target_link_libraries(TestRgbImage
+target_link_libraries(test_rgbimage
 		hyperion-utils)
 
-add_executable(TestColorTransform
+add_executable(test_colortransform
 	TestColorTransform.cpp)
-target_link_libraries(TestColorTransform
+target_link_libraries(test_colortransform
 	hyperion)
 
-add_executable(TestImage2LedsMap
+add_executable(test_image2ledsmap
 		TestImage2LedsMap.cpp)
-target_link_libraries(TestImage2LedsMap
+target_link_libraries(test_image2ledsmap
 		hyperion)
 
 add_subdirectory(dispmanx2png)
