--- a/libsrc/CMakeLists.txt
+++ b/libsrc/CMakeLists.txt
@@ -8,3 +8,4 @@ add_subdirectory(dispmanx-grabber)
 add_subdirectory(hyperion)
 add_subdirectory(jsonserver)
 add_subdirectory(utils)
+add_subdirectory(xbmcvideochecker)
